--- a/ui.apps/src/main/content/jcr_root/apps/sling-context-test/components/content/context-test/context-test.html
+++ b/ui.apps/src/main/content/jcr_root/apps/sling-context-test/components/content/context-test/context-test.html
@@ -1,7 +1,7 @@
 <div data-sly-use.siteConfig="com.sling.context.test.core.models.SiteConfigurationModel">
     <ul>
         <li>Website Color: ${siteConfig.websiteColor}</li>
-        <li>Contact Email Address: ${siteConfig.contactEmailAdress}</li>
+        <li>Contact Email Address: ${siteConfig.contactEmailAddress}</li>
         <li>Store ID: ${siteConfig.storeID}</li>
     </ul>
 </div>
